--- a/APP/package.json
+++ b/APP/package.json
@@ -15,7 +15,11 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.16.0",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
